Fix heading styling gap

--- a/packages/webapp/src/ui/components/organisms/Browser/styles.scss
+++ b/packages/webapp/src/ui/components/organisms/Browser/styles.scss
@@ -14,7 +14,7 @@
         color: #223b6a;
         font-size: 30px;
         font-weight: bold;
-        margin-bottom: 26px;
+        margin-bottom: 4px;
       }
 
       &.full-width {
